syntax = "proto3";

package pb;

option go_package = "proto/pb;pb";

service CommentService{
    rpc Comment(CommentReq) returns (CommentResp);
    rpc response(ResponseReq) returns (ResponseResp);
    rpc GetComment(GetCommentReq) returns (GetCommentResp);
}

message Resp {
    int64 id = 1;
    int64 user_id = 2;
    string content = 3;
    int64 sent_at = 4;
}

message CommentReq {
    int64 user_id = 1;
    int64 video_id = 2;
    string content = 3; // @gotags: json:"content" form:"content" binding:"required"
    int64 sent_at = 4;
}

message CommentResp {
    Resp comment = 1;
}

message ResponseReq {
    int64 user_id = 1;
    int64 comment_id = 2;
    string content = 3; // @gotags: json:"content" form:"content" binding:"required"
    int64 sent_at = 4;
}

message ResponseResp {
    Resp response = 1;
    int64 comment_id = 2;
}

message GetCommentReq {
    int64 comment_id = 1; // @gotags: json:"comment_id" form:"comment_id" binding:"required"
}

message GetCommentResp {
    Resp comment = 1;
    repeated Resp responds = 2;
}

